FrostWire 2.6.0 build 704 - AUG/30/2022
 - Telluride Video Page Search is here.
 - Faster more responsive keyword search.
 - 703: Simpler, more robust Python runtime startup
 - 703: Better handling of no search results on video url
 - 704: com.applovin:applovin-sdk:11.3.3

FrostWire 2.5.0 build 701 - AUG/14/2022
 - LESS IS MORE. The FrostWire we'd like to use is here.
 - Removal of annoying Interstitial ad display logic, video ads are only shown when user wants to remove ads for 30 minutes
 - Removal of "My Files", it's impossible to maintain across so many android versions and devices with the file management quicksand on android
 - "Downloads" opens the user's favorite Android File Explorer
 - Fixes issues where finished downloads would get re-inserted into the MediaStore
   giving users the impression the file had been downloaded multiple times
 - FrostWire will correctly handle opening music files from different file explorers as long as
   the music files have been scanned by the Android Media Store
 - Major code cleanup after removal of "My Files" fragments and activities
 - Finished download scanning issues solved for Android 10, 11 and 12.
 - Easy access to Google Play Subscriptions management.
 - Fixed soundcloud search performer.
 - com.android.tools.build:gradle:7.2.2
 - com.google.android.material:material:1.6.1
 - com.google.firebase:firebase-crashlytics-gradle:2.9.1
 - com.google.gms:google-services:4.3.13
 - androidx.annotation:annotation:1.4.0
 - com.unity3d.ads:unity-ads:4.2.1


FrostWire 2.4.8 build 691 - APR/20/2022
 - TorLock search fixed
 - Removed torrent-paradise.ml, moved to IPFS, no longer works with JSON api
 - com.android.billingclient:billing:4.1.0
 - Expose settings_pack.validate_https_trackers with SettingsPack::validateHttpsTrackers methods
 - Privacy improvement: App no longer requires asking user for location
 - lt:upgrade to boost 1.79
 - lt:openssl 1.1.1n upgrade
 - lt:fix bdecode support for large strings (>= 100 MB)